--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -35,7 +35,7 @@ a {
 }
 
 a:hover {
-    color: tomato;
+    color: #f0776c;
 }
 
 /* ==========================================================================
@@ -82,7 +82,7 @@ a:hover {
 }
 
 .nav > .nav-links > a:hover {
-    color: tomato;
+    color: #f0776c;
 }
 
 .nav > #nav-check {
@@ -148,6 +148,72 @@ a:hover {
     color: white;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+
+/* ==========================================================================
+   Sign up and Log in
+   ========================================================================== */
+#auth {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(auto, auto));
+    grid-auto-flow: dense;
+    padding: 10px;
+}
+
+.auth {
+    margin: 20px auto;
+    padding: 30px 25px;
+    border: 1px solid #c4c4c4;
+}
+
+h1.auth-title {
+    margin: -28px -25px 25px;
+    padding: 15px 25px;
+    line-height: 30px;
+    font-size: 25px;
+    font-weight: 300;
+    color: #adadad;
+    text-align:center;
+    background: #f7f7f7;
+
+}
+
+.auth-input {
+    width: 100%;
+    height: 50px;
+    margin-bottom: 25px;
+    padding-left:10px;
+    font-size: 15px;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.auth-input:focus {
+    border-color:#6e8095;
+    outline: none;
+}
+
+.auth-button {
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    background: #f0776c;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    outline:0;
+}
+
+.auth-more
+{
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 0;
 }
 
 
