--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -288,6 +288,43 @@ h1.auth-title {
     margin-top: 10px;
 }
 
+/* Meetup page ask question
+   ========================================================================== */
+#meetup .ask {
+    background: white;
+}
+
+.ask textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+}
+
+.ask textarea:focus {
+    outline: none;
+    border-width: 0;
+    box-shadow: 0 0 5px #53e3a6;
+}
+
+.ask button {
+    width: 30%;
+    height: 50px;
+    padding: 0;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    background: #f0776c;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    outline:0;
+    margin-top: 10px;
+}
 
 /* ==========================================================================
    Footer
@@ -366,5 +403,11 @@ h1.auth-title {
     #meetup .aside {
         grid-column-end: span 6;
         grid-row-end: span 1;
+    }
+}
+
+@media (max-width: 500px) {
+    .ask button {
+        width: 100%;
     }
 }
