--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -17,7 +17,6 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    text-align: justify;
 }
 
 .container {
@@ -375,6 +374,7 @@ h1.auth-title {
 
 .profile {
     margin: 8px 10px 0 0;
+    text-align: center;
 }
 .profile img {
     width: 75px;
@@ -385,6 +385,61 @@ h1.auth-title {
     margin-top: 5px;
     padding: 0 15px;
 }
+
+
+/* ==========================================================================
+   Add answer // Question page
+   ========================================================================== */
+#answer {
+    margin-left: 100px;
+}
+
+.answer-body {
+    margin-top: 5px;
+    padding: 0 15px;
+}
+
+#author {
+    color: #53e3a6;
+}
+
+.add-answer {
+    padding-top: 30px;
+    margin-left: 120px;
+}
+
+.add-answer textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+}
+
+.add-answer textarea:focus {
+    outline: none;
+    border-width: 0;
+    box-shadow: 0 0 5px #53e3a6;
+}
+
+.add-answer button {
+    width: 30%;
+    height: 50px;
+    padding: 0;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    background: #f0776c;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    outline:0;
+    margin-top: 10px;
+}
+
 
 /* ==========================================================================
    Footer
@@ -469,5 +524,25 @@ h1.auth-title {
 @media (max-width: 500px) {
     .ask button {
         width: 100%;
+    }
+}
+
+@media (max-width: 700px) {
+    .flex {
+        flex-flow: row wrap;
+    }
+
+    .profile img {
+        width: 45px;
+        vertical-align: top;
+    }
+
+    #answer {
+        margin-left: 10px;
+    }
+
+    .add-answer {
+        padding-top: 30px;
+        margin-left: 12px;
     }
 }
