--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -442,6 +442,78 @@ h1.auth-title {
 
 
 /* ==========================================================================
+   User Profile
+   ========================================================================== */
+#profile-page {
+    display: flex;
+    justify-content: space-between;
+}
+
+#profile-page .user-profile {
+    color: #919A9F;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#profile-page .user-profile img {
+    border-radius: 50%;
+    float: left;
+    width: 100px;
+    height: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
+
+/* Activity feed
+   ========================================================================== */
+.activity-feed {
+    padding: 15px;
+    list-style: none;
+}
+
+.activity-feed .feed-item {
+    position: relative;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    border-left: 2px solid #e4e8eb;
+}
+
+.activity-feed .feed-item:last-child {
+    border-color: transparent;
+}
+
+.activity-feed .feed-item::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: -6px;
+    width: 10px;
+    height: 10px;
+    border-radius: 6px;
+    background: #fff;
+    border: 1px solid #f0776c;
+}
+
+.activity-feed .feed-item .date {
+    display: block;
+    position: relative;
+    top: -5px;
+    color: #8c96a3;
+    text-transform: uppercase;
+    font-size: 13px;
+}
+
+.activity-feed .feed-item .text {
+    position: relative;
+    top: -3px;
+}
+
+
+/* ==========================================================================
    Footer
    ========================================================================== */
 .footer {
@@ -544,5 +616,14 @@ h1.auth-title {
     .add-answer {
         padding-top: 30px;
         margin-left: 12px;
+    }
+}
+
+/* Profile page
+   ========================================================================== */
+@media (max-width: 600px) {
+    #profile-page {
+        display: flex;
+        flex-flow:column nowrap;
     }
 }
