--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -521,6 +521,91 @@ h1.auth-title {
     justify-content: space-between;
 }
 
+#admin-page i {
+    padding: 10px;
+}
+
+#admin-page i:hover {
+    cursor: pointer;
+}
+
+.fa-plus {
+    color: #53e3a6;
+}
+
+#new-meetup {
+    margin: 20px auto;
+    padding: 30px 25px;
+    border: 1px solid #c4c4c4;
+    max-width: 50%;
+}
+
+h1.new-title {
+    margin: -28px -25px 25px;
+    padding: 15px 25px;
+    line-height: 30px;
+    font-size: 25px;
+    font-weight: 300;
+    color: #adadad;
+    text-align:center;
+    background: #f7f7f7;
+
+}
+
+.new-input {
+    width: 100%;
+    height: 50px;
+    margin-bottom: 25px;
+    padding-left:10px;
+    font-size: 15px;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#new-meetup-form textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 15px;
+    resize: none;
+    border: 1px solid #ccc;
+    font-family: Roboto, serif;
+}
+
+.new-input:focus {
+    border-color:#6e8095;
+    outline: none;
+}
+
+#new-meetup-form textarea:focus {
+    border-color:#6e8095;
+    outline: none;
+}
+
+.new-button {
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    background: #f0776c;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    outline:0;
+}
+
+.cancel
+{
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
 
 /* ==========================================================================
    Footer
@@ -634,5 +719,25 @@ h1.auth-title {
     #profile-page {
         display: flex;
         flex-flow:column nowrap;
+    }
+}
+
+/* New meetup page
+   ========================================================================== */
+@media (max-width: 700px) {
+    #new-meetup {
+        max-width: 80%;
+    }
+}
+
+@media (max-width: 600px) {
+    #new-meetup {
+        max-width: 90%;
+    }
+}
+
+@media (max-width: 500px) {
+    #new-meetup {
+        max-width: 100%;
     }
 }
