--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -533,6 +533,12 @@ h1.auth-title {
     color: #53e3a6;
 }
 
+.fa-trash-alt {
+    color: #f0776c;
+}
+
+/* New Meetup
+   ========================================================================== */
 #new-meetup {
     margin: 20px auto;
     padding: 30px 25px;
@@ -604,6 +610,74 @@ h1.new-title {
     text-align: center;
     margin-top: 5px;
     margin-bottom: 0;
+}
+
+/* Delete Meetup
+   ========================================================================== */
+.modal-window {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
+}
+.modal-window:target {
+    opacity: 1;
+    pointer-events: auto;
+}
+.modal-window > div {
+    width: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    background: #ffffff;
+    color: #f0776c;
+}
+.modal-window header {
+    font-weight: bold;
+}
+.modal-window h1 {
+    font-size: 150%;
+    margin: 0 0 15px;
+    color: #333333;
+}
+
+.modal-close {
+    color: #aaa;
+    line-height: 50px;
+    font-size: 80%;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+    width: 70px;
+    text-decoration: none;
+}
+.modal-close:hover {
+    color: #53e3a6;
+}
+
+.modal-button {
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    font-size: 20px;
+    color: #fff;
+    text-align: center;
+    background: #f0776c;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    outline:0;
+    margin-top: 10px;
 }
 
 
@@ -739,5 +813,17 @@ h1.new-title {
 @media (max-width: 500px) {
     #new-meetup {
         max-width: 100%;
+    }
+}
+
+/* Delete meetup
+   ========================================================================== */
+@media (max-width: 700px) {
+    #admin-page {
+        flex-flow: row wrap;
+    }
+
+    .modal-window > div {
+        width: 80%;
     }
 }
