--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -13,10 +13,13 @@ html {
     color: #212121;
     font-size: 1em;
     line-height: 1.4;
+    min-height: 100%;
+    position: relative;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 0 0 70px;
 }
 
 .container {
@@ -690,6 +693,8 @@ h1.new-title {
     width: 100%;
     color: #919A9F;
     text-align: center;
+    position: absolute;
+    height: 50px;
 }
 
 
