--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -168,16 +168,16 @@ a:hover {
 .auth {
     margin: 20px auto;
     padding: 30px 25px;
-    border: 1px solid #c4c4c4;
+    box-shadow: 0 0 10px #e3e3e3;
+    max-width: 40%;
 }
 
 h1.auth-title {
-    margin: -28px -25px 25px;
+    margin: -30px -25px 25px;
     padding: 15px 25px;
     line-height: 30px;
     font-size: 25px;
     font-weight: 300;
-    color: #adadad;
     text-align:center;
     background: #f7f7f7;
 
@@ -784,6 +784,32 @@ h1.new-title {
     #home .featured {
         grid-column-end: span 6;
         grid-row-end: span 1;
+    }
+}
+
+/* Auth pages
+   ========================================================================== */
+   @media (max-width: 700px) {
+    .auth {
+        max-width: 60%;
+    }
+}
+
+    @media (max-width: 500px) {
+    .auth {
+        max-width: 80%;
+    }
+}
+
+    @media (max-width: 400px) {
+    .auth {
+        max-width: 95%;
+    }
+}
+
+    @media (max-width: 300px) {
+    .auth {
+        max-width: 100%;
     }
 }
 
